--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "tradfri",
-  "version": "0.0.0",
+  "version": "2.0.0-alpha.1",
   "license": "MIT",
   "repository": "LinusU/node-tradfri",
-  "os": ["darwin"],
+  "os": [
+    "darwin"
+  ],
   "scripts": {
     "test": "standard"
   },
